Apply Java 17+ modernization to Headless & Streaming clients
- Replace Arrays.asList() with List.of() across all tool example classes
- Convert getManaPoolCount() and prettyManaType() to switch expressions
- Use var for ~180 local variables with constructor-obvious types

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>